tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/without-value-1.stderr
TOML parse error at line 1, column 4
  |
1 | key
  |    ^
expected `.`, `=`
